Spacing fix (#926)
Forgot to make a PR of this branch!

cc @prologic

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/926
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -1,3 +1,7 @@
+p:not(:empty)+p:not(:empty) {
+  margin-top: 1rem;
+}
+
 dialog+p br {
   display: none;
 }
@@ -161,12 +165,6 @@ textarea#css {
 #profile-info details p {
   padding-top: 0.5rem;
   padding-bottom: 0;
-}
-
-#muteTool,
-#reportTool {
-  display: block;
-  margin-top: -1rem !important;
 }
 
 #postToUser {
@@ -1241,6 +1239,10 @@ dialog[id^='lvm-'] #twobutton {
 }
 
 @media (max-width: 576px) {
+  #versionInfo {
+    padding-bottom: 0.5rem;
+  }
+
   #newPost + .grid.h-feed nav.timeline-nav:first-of-type {
     margin-top: -1rem;
   }
